Change chatbar and dialogs to match a bit closer to dgg design

--- a/destiny-chat-client/Views/Dialogs/Emotes.xaml
+++ b/destiny-chat-client/Views/Dialogs/Emotes.xaml
@@ -6,12 +6,13 @@
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d"
+             Background="#111111"
              TextElement.FontSize="16"
              TextElement.FontWeight="Regular"
              TextOptions.TextFormattingMode="Ideal"
              Name="EmoteWindow"
              DataContext="{Binding Source={StaticResource Locator}, Path=Main}">
-    <DockPanel Background="#181818" Opacity="0.9" Height="500" Width="400">
+    <DockPanel Height="500" Width="400">
         <Border DockPanel.Dock="Top" Background="#424242" Padding="8">
             <DockPanel>
                 <materialDesign:Card Background="#424242" DockPanel.Dock="Right" Width="20"  VerticalAlignment="Center" >
