--- a/destiny-chat-client/Views/Components/ChatBar.xaml
+++ b/destiny-chat-client/Views/Components/ChatBar.xaml
@@ -1,26 +1,25 @@
 ﻿<UserControl x:Class="destiny_chat_client.Views.Components.ChatBar"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:destiny_chat_client.Views.Components"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModels="clr-namespace:destiny_chat_client.ViewModels"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              Background="#080808"
              d:DataContext="{d:DesignInstance viewModels:MainWindowViewModel}"
-             d:DesignHeight="50" d:DesignWidth="480">
-    <Border BorderThickness="2" CornerRadius="3" BorderBrush="#222222">
-        <DockPanel>
-            <DockPanel DockPanel.Dock="Right" Background="#222222">
-                <materialDesign:PackIcon Background="#222222"
-                                         VerticalAlignment="Center"
-                                         DockPanel.Dock="Right"
-                                         Kind="Account"
-                                         Margin="5"
-                                         Width="25"
-                                         Height="25">
+             d:DesignWidth="480">
+    <DockPanel>
+        <DockPanel DockPanel.Dock="Bottom" Margin="15,0">
+            <DockPanel DockPanel.Dock="Right">
+                <materialDesign:PackIcon
+                    VerticalAlignment="Center"
+                    DockPanel.Dock="Right"
+                    Kind="Account"
+                    Margin="5"
+                    Width="25"
+                    Height="25">
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="MouseUp">
                             <i:InvokeCommandAction Command="{Binding UserlistCommand}" />
@@ -28,7 +27,7 @@
                     </i:Interaction.Triggers>
                     <materialDesign:PackIcon.Resources>
                         <Style TargetType="materialDesign:PackIcon">
-                            <Setter Property="Foreground" Value="#413D34" />
+                            <Setter Property="Foreground" Value="#414141" />
                             <Style.Triggers>
                                 <Trigger Property="IsMouseOver" Value="True">
                                     <Setter Property="Foreground" Value="White" />
@@ -40,7 +39,7 @@
                         </Style>
                     </materialDesign:PackIcon.Resources>
                 </materialDesign:PackIcon>
-                <materialDesign:PackIcon Background="#222222" Kind="Settings"
+                <materialDesign:PackIcon Kind="Settings"
                                          Width="25"
                                          Margin="5"
                                          VerticalAlignment="Center"
@@ -52,7 +51,7 @@
                     </i:Interaction.Triggers>
                     <materialDesign:PackIcon.Resources>
                         <Style TargetType="materialDesign:PackIcon">
-                            <Setter Property="Foreground" Value="#413D34" />
+                            <Setter Property="Foreground" Value="#414141" />
                             <Style.Triggers>
                                 <Trigger Property="IsMouseOver" Value="True">
                                     <Setter Property="Foreground" Value="White" />
@@ -65,7 +64,7 @@
                     </materialDesign:PackIcon.Resources>
                 </materialDesign:PackIcon>
             </DockPanel>
-            <materialDesign:PackIcon Background="#080808" Kind="EmoticonHappy"
+            <materialDesign:PackIcon Kind="EmoticonHappy"
                                      DockPanel.Dock="Right"
                                      Margin="4"
                                      VerticalAlignment="Center"
@@ -78,7 +77,7 @@
                 </i:Interaction.Triggers>
                 <materialDesign:PackIcon.Resources>
                     <Style TargetType="materialDesign:PackIcon">
-                        <Setter Property="Foreground" Value="#413D34" />
+                        <Setter Property="Foreground" Value="#414141" />
                         <Style.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
                                 <Setter Property="Foreground" Value="White" />
@@ -90,13 +89,15 @@
                     </Style>
                 </materialDesign:PackIcon.Resources>
             </materialDesign:PackIcon>
+        </DockPanel>
+        <Border CornerRadius="3" BorderBrush="#222222" Background="#111111" BorderThickness="1" Margin="10,10,10,0">
             <TextBox materialDesign:HintAssist.Hint="{Binding ChatHint}"
                      materialDesign:HintAssist.HintOpacity="0.4"
                      Margin="5"
-                     DockPanel.Dock="Bottom"
-                     Background="#080808"
                      Foreground="#759999"
-                     VerticalAlignment="Center"
+                     MinHeight="45"
+                     VerticalContentAlignment="Top"
+                     HorizontalContentAlignment="Left"
                      HorizontalAlignment="Stretch"
                      KeyDown="UIElement_OnKeyDown"
                      TextChanged="TextBoxBase_OnTextChanged"
@@ -121,6 +122,6 @@
                     </Style>
                 </TextBox.Resources>
             </TextBox>
-        </DockPanel>
-    </Border>
+        </Border>
+    </DockPanel>
 </UserControl>
