--- a/destiny-chat-client/Views/Components/ChatBar.xaml
+++ b/destiny-chat-client/Views/Components/ChatBar.xaml
@@ -10,23 +10,26 @@
              Background="#080808"
              d:DataContext="{d:DesignInstance viewModels:MainWindowViewModel}"
              d:DesignWidth="480">
-    <DockPanel>
-        <DockPanel DockPanel.Dock="Bottom" Margin="15,0">
-            <DockPanel DockPanel.Dock="Right">
-                <materialDesign:PackIcon
-                    VerticalAlignment="Center"
-                    DockPanel.Dock="Right"
-                    Kind="Account"
-                    Margin="5"
-                    Width="25"
-                    Height="25">
+    <UserControl.Resources>
+        <Style TargetType="materialDesign:PackIcon" x:Key="PackIconStyle">
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="Width" Value="30" />
+            <Setter Property="Height" Value="30" />
+            <Setter Property="Background" Value="#080808" />
+        </Style>
+    </UserControl.Resources>
+    <DockPanel Margin="5, 5, 5, 0">
+        <DockPanel Margin="0, 5" DockPanel.Dock="Bottom" LastChildFill="False">
+            <DockPanel DockPanel.Dock="Right" LastChildFill="False">
+                <materialDesign:PackIcon DockPanel.Dock="Right" Kind="Account" ToolTip="Look at list of viewers">
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="MouseUp">
                             <i:InvokeCommandAction Command="{Binding UserlistCommand}" />
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
                     <materialDesign:PackIcon.Resources>
-                        <Style TargetType="materialDesign:PackIcon">
+                        <Style TargetType="materialDesign:PackIcon" BasedOn="{StaticResource PackIconStyle}">
                             <Setter Property="Foreground" Value="#414141" />
                             <Style.Triggers>
                                 <Trigger Property="IsMouseOver" Value="True">
@@ -39,18 +42,14 @@
                         </Style>
                     </materialDesign:PackIcon.Resources>
                 </materialDesign:PackIcon>
-                <materialDesign:PackIcon Kind="Settings"
-                                         Width="25"
-                                         Margin="5"
-                                         VerticalAlignment="Center"
-                                         Height="25">
+                <materialDesign:PackIcon Kind="Settings" ToolTip="Change settings">
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="MouseUp">
                             <i:InvokeCommandAction Command="{Binding SettingsCommand}" />
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
                     <materialDesign:PackIcon.Resources>
-                        <Style TargetType="materialDesign:PackIcon">
+                        <Style TargetType="materialDesign:PackIcon" BasedOn="{StaticResource PackIconStyle}">
                             <Setter Property="Foreground" Value="#414141" />
                             <Style.Triggers>
                                 <Trigger Property="IsMouseOver" Value="True">
@@ -64,38 +63,58 @@
                     </materialDesign:PackIcon.Resources>
                 </materialDesign:PackIcon>
             </DockPanel>
-            <materialDesign:PackIcon Kind="EmoticonHappy"
-                                     DockPanel.Dock="Right"
-                                     Margin="4"
-                                     VerticalAlignment="Center"
-                                     Width="25"
-                                     Height="25">
-                <i:Interaction.Triggers>
-                    <i:EventTrigger EventName="MouseUp">
-                        <i:InvokeCommandAction Command="{Binding EmotesCommand}" />
-                    </i:EventTrigger>
-                </i:Interaction.Triggers>
-                <materialDesign:PackIcon.Resources>
-                    <Style TargetType="materialDesign:PackIcon">
-                        <Setter Property="Foreground" Value="#414141" />
-                        <Style.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Foreground" Value="White" />
-                            </Trigger>
-                            <DataTrigger Binding="{Binding IsShowingEmotes}" Value="True">
-                                <Setter Property="Foreground" Value="White" />
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </materialDesign:PackIcon.Resources>
-            </materialDesign:PackIcon>
+            <DockPanel LastChildFill="False">
+                <materialDesign:PackIcon Kind="EmoticonHappy" ToolTip="Display chat emotes">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="MouseUp">
+                            <i:InvokeCommandAction Command="{Binding EmotesCommand}" />
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                    <materialDesign:PackIcon.Resources>
+                        <Style TargetType="materialDesign:PackIcon" BasedOn="{StaticResource PackIconStyle}">
+                            <Setter Property="Foreground" Value="#414141" />
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Foreground" Value="White" />
+                                </Trigger>
+                                <DataTrigger Binding="{Binding IsShowingEmotes}" Value="True">
+                                    <Setter Property="Foreground" Value="White" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </materialDesign:PackIcon.Resources>
+                </materialDesign:PackIcon>
+                <materialDesign:PackIcon Kind="OpenInNew" ToolTip="Open D.GG in Browser">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="MouseUp">
+                            <i:InvokeCommandAction Command="{Binding OpenWebsiteCommand}" />
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                    <materialDesign:PackIcon.Resources>
+                        <Style TargetType="materialDesign:PackIcon" BasedOn="{StaticResource PackIconStyle}">
+                            <Setter Property="Foreground" Value="#414141" />
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Foreground" Value="White" />
+                                </Trigger>
+                                <DataTrigger Binding="{Binding }" Value="True">
+                                    <Setter Property="Foreground" Value="White" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </materialDesign:PackIcon.Resources>
+                </materialDesign:PackIcon>
+            </DockPanel>
         </DockPanel>
-        <Border CornerRadius="3" BorderBrush="#222222" Background="#111111" BorderThickness="1" Margin="10,10,10,0">
+        <Border BorderBrush="#222222"  BorderThickness="2" CornerRadius="2" >
             <TextBox materialDesign:HintAssist.Hint="{Binding ChatHint}"
                      materialDesign:HintAssist.HintOpacity="0.4"
-                     Margin="5"
+                     Padding="2,-1"
+                     Background="#111111"
                      Foreground="#759999"
-                     MinHeight="45"
+                     MinHeight="50"
+                     MaxLength="110"
+                     TextWrapping="Wrap"
                      VerticalContentAlignment="Top"
                      HorizontalContentAlignment="Left"
                      HorizontalAlignment="Stretch"
