--- a/destiny-chat-client/Views/Dialogs/Login.xaml
+++ b/destiny-chat-client/Views/Dialogs/Login.xaml
@@ -7,6 +7,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:viewModels="clr-namespace:destiny_chat_client.ViewModels"
+             xmlns:components="clr-namespace:destiny_chat_client.Views.Components"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance viewModels:MainWindowViewModel}"
              Background="#111111"
@@ -22,19 +23,10 @@
     </UserControl.Resources>
     <DockPanel>
         <DockPanel DockPanel.Dock="Top">
-            <Border DockPanel.Dock="Top" Background="#424242" Padding="8">
+            <Border DockPanel.Dock="Top" Background="#333333" Padding="8">
                 <DockPanel>
-                    <materialDesign:Card Background="#424242" DockPanel.Dock="Right" Width="20"
-                                         VerticalAlignment="Center">
-                        <Label Content="X" FontSize="12" Padding="2" VerticalAlignment="Center"
-                               HorizontalAlignment="Center" Foreground="White" />
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="MouseDown">
-                                <i:InvokeCommandAction Command="{Binding ClosePopupCommand}" />
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                    </materialDesign:Card>
-                    <TextBlock Foreground="White">Login</TextBlock>
+                    <components:ClosePopupButton DockPanel.Dock="Right" />
+                    <TextBlock Foreground="#96938D">Login</TextBlock>
                 </DockPanel>
             </Border>
         </DockPanel>
