--- a/destiny-chat-client/Views/Dialogs/Settings.xaml
+++ b/destiny-chat-client/Views/Dialogs/Settings.xaml
@@ -6,6 +6,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:viewModels="clr-namespace:destiny_chat_client.ViewModels"
+             xmlns:components="clr-namespace:destiny_chat_client.Views.Components"
              d:DataContext="{d:DesignInstance viewModels:MainWindowViewModel}"
              TextElement.FontSize="16"
              TextElement.FontWeight="Regular"
@@ -174,17 +175,8 @@
         <DockPanel DockPanel.Dock="Top">
             <Border DockPanel.Dock="Top" Background="#333333" Padding="8">
                 <DockPanel>
-                    <materialDesign:Card Background="#424242" DockPanel.Dock="Right" Width="20"
-                                         VerticalAlignment="Center">
-                        <Label Content="X" FontSize="12" Padding="2" VerticalAlignment="Center"
-                               HorizontalAlignment="Center" Foreground="White" />
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="MouseDown">
-                                <i:InvokeCommandAction Command="{Binding ClosePopupCommand}" />
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                    </materialDesign:Card>
-                    <TextBlock Foreground="White" FontFamily="Roboto">Settings</TextBlock>
+                    <components:ClosePopupButton DockPanel.Dock="Right" />
+                    <TextBlock VerticalAlignment="Center" Foreground="#96938D" FontFamily="Roboto">Settings</TextBlock>
                 </DockPanel>
             </Border>
         </DockPanel>
