--- a/destiny-chat-client/Views/Dialogs/Users.xaml
+++ b/destiny-chat-client/Views/Dialogs/Users.xaml
@@ -3,29 +3,22 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:classes="clr-namespace:destiny_chat_client.Classes"
+             xmlns:components="clr-namespace:destiny_chat_client.Views.Components"
              mc:Ignorable="d"
+             Background="#111111"
              Name="SettingsWindow"
              TextElement.FontSize="16"
              TextElement.FontWeight="Regular"
              TextOptions.TextFormattingMode="Ideal"
-             Background="#111111"
              DataContext="{Binding Source={StaticResource Locator}, Path=Main}">
-    <DockPanel Background="#181818" Height="500" Width="300">
+    <DockPanel Height="500" Width="300">
         <DockPanel DockPanel.Dock="Top">
-            <Border DockPanel.Dock="Top" Background="#424242" Padding="8">
+            <Border DockPanel.Dock="Top" Background="#333333" Padding="8">
                 <DockPanel>
-                    <materialDesign:Card Background="#424242" DockPanel.Dock="Right" Width="20"  VerticalAlignment="Center" >
-                        <Label Content="X" FontSize="12" Padding="2" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White"/>
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="MouseDown">
-                                <i:InvokeCommandAction Command="{Binding ClosePopupCommand}"/>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                    </materialDesign:Card>
-                    <TextBlock Foreground="White">Users (~<Run Text="{Binding ChatService.Users.Count, Mode=OneWay}" />)</TextBlock>
+                    <components:ClosePopupButton DockPanel.Dock="Right" />
+                    <TextBlock VerticalAlignment="Center" Foreground="#96938D">Users (~<Run Text="{Binding ChatService.Users.Count, Mode=OneWay}" />)</TextBlock>
                 </DockPanel>
             </Border>
         </DockPanel>
