--- a/destiny-chat-client/App.xaml
+++ b/destiny-chat-client/App.xaml
@@ -16,6 +16,7 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/materialdesigntheme.textblock.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/materialdesigntheme.button.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/materialdesigntheme.label.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/materialdesigntheme.popupbox.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <Style TargetType="{x:Type materialDesign:Card}">
@@ -24,7 +25,15 @@
                 <Setter Property="VerticalAlignment" Value="Top" />
                 <Setter Property="Focusable" Value="False"/>
             </Style>
-            
+
+            <Style TargetType="materialDesign:PackIcon" x:Key="PackIconStyle">
+                <Setter Property="VerticalContentAlignment" Value="Center" />
+                <Setter Property="VerticalAlignment" Value="Center" />
+                <Setter Property="Width" Value="30" />
+                <Setter Property="Height" Value="30" />
+                <Setter Property="Background" Value="#080808" />
+            </Style>
+
             <local:ViewModelLocator x:Key="Locator" />
 
             <classes:BoolOpacityConverter x:Key="BoolOpacityConverter" />
