--- a/destiny-chat-client/Views/Components/ComboMessage.xaml
+++ b/destiny-chat-client/Views/Components/ComboMessage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             Margin="6,0,0,0"
+             Margin="6,0,0,-4"
              mc:Ignorable="d">
     <UserControl.Resources>
         <SolidColorBrush x:Key="Background">#191919</SolidColorBrush>
